--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet">
+
+    <meta charset="UTF-8">
     <title>Local Weather</title>
 </head>
 <body>
+<h1 class="title text-center"><i class="fa fa-star"></i>L<i class="fa fa-mixcloud"></i>cal Weather App<i class="fa fa-star"></i>
+</h1>
+<hr>
 
 </body>
+<script src="js/app.js"></script>
 </html>
