applied ipfinfo api,styles update,html update

--- a/index.html
+++ b/index.html
@@ -2,18 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
 
     <meta charset="UTF-8">
     <title>Local Weather</title>
+
 </head>
 <body>
 <h1 class="title text-center"><i class="fa fa-star"></i>L<i class="fa fa-mixcloud"></i>cal Weather App<i class="fa fa-star"></i>
 </h1>
 <hr>
+<div>
+    <h2 class="text-center" id="city">Fetching your current city....</h2>
+    <h2 class="text-center" id="country">Fetching your Country...</h2>
+</div>
+<h2 class="text-center" id="temperature"> Temperature goes here</h2>
 
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="js/app.js"></script>
 </html>
+
