added longitude and latitude,styles update,html update

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <h1 class="title text-center"><i class="fa fa-star"></i>L<i class="fa fa-mixcloud"></i>cal Weather App<i class="fa fa-star"></i>
 </h1>
 <hr>
-<div>
+<div id="detailing">
     <h2 class="text-center" id="city">Fetching your current city....</h2>
     <h2 class="text-center" id="country">Fetching your Country...</h2>
+    <h2 class="text-center" id="location"> Fetching location coordinates.. </h2>
+    <h2 class="text-center" id="temperature"> </h2>
 </div>
-<h2 class="text-center" id="temperature"> Temperature goes here</h2>
+
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
