fetch temperature,html update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2 class="text-center" id="city">Fetching your current city....</h2>
     <h2 class="text-center" id="country">Fetching your Country...</h2>
     <h2 class="text-center" id="location"> Fetching location coordinates.. </h2>
-    <h2 class="text-center" id="temperature"> </h2>
+    <h2 class="text-center" id="temperature">Fetching temperature.. </h2>
 </div>
 
 
