--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<h1 class="title text-center"><i class="fa fa-star"></i>L<i class="fa fa-mixcloud"></i>cal Weather App<i class="fa fa-star"></i>
+<h1 class="title text-center"><i class="fa fa-star"></i>L<i class="fa fa-cloud"></i>cal Weather App<i class="fa fa-star"></i>
 </h1>
 <hr>
 <div id="detailing">
