--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 <h1 class="title text-center"><i class="fa fa-star"></i>L<i class="fa fa-cloud"></i>cal Weather App<i class="fa fa-star"></i>
 </h1>
 <hr>
-<div id="detailing">
-    <h2 class="text-center" id="city">Fetching your current city....</h2>
-    <h2 class="text-center" id="country">Fetching your Country...</h2>
-    <h2 class="text-center" id="location"> Fetching location coordinates.. </h2>
-    <h2 class="text-center" id="temperature">Fetching temperature.. </h2>
+<div id="detailing" class="text-center">
+    <h2  id="city">Fetching your current city....</h2>
+    <h2  id="country">Fetching your Country...</h2>
+    <h2 id="location"> Fetching location coordinates.. </h2>
+    <div id="tempButtonWrapper">
+        <div  id="temperature"></div>
+
+        <div  id="button"><button>°C</button></div>
+    </div>
 </div>
 
 
