added temp converter button,styles update,html update

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <div  id="temperature"></div>
 
         <div  id="button"><button>°C</button></div>
+        <div  id="button2"><button>°F</button></div>
+
     </div>
 </div>
 
