--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div id="tempButtonWrapper">
         <div  id="temperature"></div>
 
-        <div  id="button"><button>°C</button></div>
-        <div  id="button2"><button>°F</button></div>
+        <div><button id="button">°C</button></div>
+        <div><button id="button2">°F</button></div>
 
     </div>
 </div>
