added current weathe from api

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <h2  id="city">Fetching your current city....</h2>
     <h2  id="country">Fetching your Country...</h2>
     <h2 id="location"> Fetching location coordinates.. </h2>
+    <h2 id="current_weather">weather goes here</h2>
+
     <div id="tempButtonWrapper">
         <div  id="temperature"></div>
 
@@ -27,7 +29,10 @@
         <div><button id="button2">°F</button></div>
 
     </div>
+
+
 </div>
+
 
 
 </body>
