--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
@@ -13,7 +14,7 @@
 
 </head>
 <body>
-<h1 class="title text-center"><i class="fa fa-star"></i>L<i class="fa fa-cloud"></i>cal Weather App<i class="fa fa-star"></i>
+<h1 class="title text-center"><i class="fa fa-star"></i>L<i class="wi wi-cloud"></i>cal Weather App<i class="fa fa-star"></i>
 </h1>
 <hr>
 <div id="detailing" class="text-center">
