--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -22,19 +22,12 @@
     <h2  id="country">Fetching your Country...</h2>
     <h2 id="location"> Fetching location coordinates.. </h2>
     <h2 id="current_weather">weather goes here</h2>
-
     <div id="tempButtonWrapper">
         <div  id="temperature"></div>
-
-        <div><button id="button">°C</button></div>
-        <div><button id="button2">°F</button></div>
-
+        <button id="button">°C</button>
+        <button id="button2">°F</button>
     </div>
-
-
 </div>
-
-
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
