--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons-wind.css">
     <link href="css/styles.css" rel="stylesheet">
 
     <meta charset="UTF-8">
@@ -22,11 +23,13 @@
     <h2  id="country">Fetching your Country...</h2>
     <h2 id="location"> Fetching location coordinates.. </h2>
     <h2 id="current_weather">weather goes here</h2>
+    <i class="wi wi-cloud"></i>
     <div id="tempButtonWrapper">
         <div  id="temperature"></div>
         <button id="button">°C</button>
         <button id="button2">°F</button>
     </div>
+
 </div>
 
 </body>
