user story update

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 </h1>
 <hr>
 <div id="detailing" class="text-center">
-    <h2  id="city">Fetching your current city....</h2>
-    <h2  id="country">Fetching your Country...</h2>
-    <h2 id="location"> Fetching location coordinates.. </h2>
+    <h2  id="city"></h2>
+    <h2  id="country"></h2>
+    <h2 id="location"></h2>
     <h2 id="current_weather">weather goes here</h2>
-    <i class="wi wi-cloud"></i>
+    <i id="icons"class="wi"></i>
+
     <div id="tempButtonWrapper">
         <div  id="temperature"></div>
         <button id="button">°C</button>
