--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="detailing" class="text-center">
     <h2  id="city"></h2>
     <h2  id="country"></h2>
-    <h2 id="location"></h2>
+   <!--- <h2 id="location"></h2> -->
     <h2 id="current_weather">weather goes here</h2>
     <i id="icons"class="wi"></i>
 
@@ -37,4 +37,3 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="js/app.js"></script>
 </html>
-
