--- a/index.html
+++ b/index.html
@@ -7,32 +7,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons-wind.css">
     <link href="css/styles.css" rel="stylesheet">
-
-    <meta charset="UTF-8">
     <title>Local Weather</title>
-
 </head>
 <body>
-<h1 class="title text-center"><i class="fa fa-star"></i>L<i class="wi wi-cloud"></i>cal Weather App<i class="fa fa-star"></i>
-</h1>
+<h1 class="title text-center"><i class="fa fa-star"></i>L<i class="wi wi-cloud"></i>cal Weather App<i class="fa fa-star"></i></h1>
 <hr>
 <div id="detailing" class="text-center">
     <h2  id="city"></h2>
     <h2  id="country"></h2>
    <!--- <h2 id="location"></h2> -->
-    <h2 id="current_weather">weather goes here</h2>
+    <h2 id="current_weather"></h2>
     <i id="icons"class="wi"></i>
-
     <div id="tempButtonWrapper">
         <div  id="temperature"></div>
-        <button id="button">°C</button>
-        <button id="button2">°F</button>
+        <button id="button1">C</button>
+        <button id="button2">F</button>
     </div>
 
 </div>
-
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="js/app.js"></script>
